内存加载，依据的是PE加载过程，理解原理 这里留了一个问题，例子代码不能直接用，估计跟环境有关

--- a/RunProc/RunProc.vcxproj
+++ b/RunProc/RunProc.vcxproj
@@ -30,7 +30,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>NotSet</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="MmLoadDll.cpp" />
+    <ClCompile Include="MmLoadExe.cpp" />
     <ClCompile Include="RunProc.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MmLoadDll.h" />
+    <ClInclude Include="MmLoadExe.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
