进程伪装/傀偶进程

--- a/FakeOrHide/FakeOrHide.vcxproj
+++ b/FakeOrHide/FakeOrHide.vcxproj
@@ -30,7 +30,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DisguiseProcess.cpp" />
     <ClCompile Include="FakeOrHide.cpp" />
+    <ClCompile Include="ReplaceProcess.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DisguiseProcess.h" />
+    <ClInclude Include="ReplaceProcess.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
