--- a/FakeOrHide/FakeOrHide.vcxproj.filters
+++ b/FakeOrHide/FakeOrHide.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="FakeOrHide.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DisguiseProcess.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ReplaceProcess.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DisguiseProcess.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ReplaceProcess.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
