--- a/FakeOrHide/FakeOrHide.vcxproj.filters
+++ b/FakeOrHide/FakeOrHide.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="ReplaceProcess.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DllHijackDemo.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DisguiseProcess.h">
