--- a/FakeOrHide_HOOKDLL/FakeOrHide_HOOKDLL.vcxproj.filters
+++ b/FakeOrHide_HOOKDLL/FakeOrHide_HOOKDLL.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Source.def">
+      <Filter>源文件</Filter>
+    </None>
+  </ItemGroup>
 </Project>
