--- a/NetLinking/NetLinking.vcxproj.filters
+++ b/NetLinking/NetLinking.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="TcpClient.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="UDPTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TcpClient.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="UDPTest.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
