基于WinInet的HTTPS上传下载方式

--- a/NetLinking/NetLinking.vcxproj
+++ b/NetLinking/NetLinking.vcxproj
@@ -139,12 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="HttpsInet.cpp" />
     <ClCompile Include="NetLinking.cpp" />
     <ClCompile Include="TcpClient.cpp" />
     <ClCompile Include="UDPTest.cpp" />
     <ClCompile Include="WinInet_Ftp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HttpsInet.h" />
     <ClInclude Include="TcpClient.h" />
     <ClInclude Include="UDPTest.h" />
     <ClInclude Include="WinInet_Ftp.h" />
