--- a/MonitorDriver/MonitorDriver.vcxproj.filters
+++ b/MonitorDriver/MonitorDriver.vcxproj.filters
@@ -27,5 +27,13 @@
     <ClCompile Include="MonitorDriver.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NotifyRoutine.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="NotifyRoutine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
